[package]
name = "fmc_noise"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/formulaicgame/fmc_noise/"
description = "SIMD gradient noise library"
license = "MIT OR Apache-2.0"
keywords = ["simd", "noise", "perlin", "simplex"]

[dependencies]
multiversion = { version = "0.8.0", path = "macros", package = "fmc_noise_macros" }
target-features = "0.1.6"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
